Fix padding on tablet and mobile

--- a/source/_assets/stylesheets/tomdiggle/_page.scss
+++ b/source/_assets/stylesheets/tomdiggle/_page.scss
@@ -1,4 +1,6 @@
 .page {
+    padding: 0 1em;
+    
     h2 {
         border-bottom: 1px $separator-color solid;
     }
